klass-model-converters/klass-compiler/src/test/resources/cool/klass/model/converter/compiler/error/audit/AuditDataPropertyTypeErrorTest.klass
package com.errors

enumeration DummyEnumeration
{
    DUMMY_LITERAL,
}

user User systemTemporal versioned
{
    id: DummyEnumeration key userId;
}

class DummyClass systemTemporal versioned audited
{
    id             : Long id key;
    system         : DummyEnumeration system;
    systemFrom     : DummyEnumeration system from;
    systemTo       : DummyEnumeration system to;
    createdById    : DummyEnumeration createdBy userId final;
    createdOn      : DummyEnumeration createdOn final;
    lastUpdatedById: DummyEnumeration lastUpdatedBy userId;
}

class DummyClass2
{
    id             : Long id key;
    system         : TemporalRange?;
    systemFrom     : TemporalInstant? from;
    systemTo       : TemporalInstant? to;
    createdById    : String createdBy;
    createdOn      : Instant createdOn;
    lastUpdatedById: String lastUpdatedBy final;
}

class DummyClass3
{
    id             : Long id key;
    system         : TemporalRange system;
    systemFrom     : TemporalInstant system from;
    systemTo       : TemporalInstant system to;
}
